--- a/ConvGAN/Generate_MIDIs.ipynb
+++ b/ConvGAN/Generate_MIDIs.ipynb
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO Convert Images to MIDIs"
+    "# Convert Images to MIDIs"
    ]
   },
   {
