improved disc and gen models

--- a/ConvGAN/Train_ConvGan.ipynb
+++ b/ConvGAN/Train_ConvGan.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import keras\n",
     "import pickle\n",
     "from keras.utils import np_utils\n",
-    "from tensorflow.keras.layers import InputLayer, Dense, LSTM, Dropout, Activation, Conv2D, Flatten, Reshape, Conv2DTranspose\n",
+    "from tensorflow.keras.layers import InputLayer, Dense, LSTM, Dropout, Activation, Conv2D, Flatten, Reshape, Conv2DTranspose,MaxPooling2D\n",
     "from tensorflow.keras.models import Sequential\n",
     "import math\n",
     "\n",
@@ -268,6 +268,189 @@
     "    return D\n",
     "\n",
     "D=build_discriminator(d_filters=[64,64])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_7\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "DC0 (Conv2D)                 (None, 96, 96, 32)        1184      \n",
+      "_________________________________________________________________\n",
+      "dropout_16 (Dropout)         (None, 96, 96, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_7 (MaxPooling2 (None, 48, 48, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "DC1 (Conv2D)                 (None, 48, 48, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "dropout_17 (Dropout)         (None, 48, 48, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_8 (MaxPooling2 (None, 24, 24, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "DC2 (Conv2D)                 (None, 24, 24, 16)        4624      \n",
+      "_________________________________________________________________\n",
+      "dropout_18 (Dropout)         (None, 24, 24, 16)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_9 (MaxPooling2 (None, 12, 12, 16)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_3 (Flatten)          (None, 2304)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_10 (Dense)             (None, 64)                147520    \n",
+      "_________________________________________________________________\n",
+      "dropout_19 (Dropout)         (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_11 (Dense)             (None, 16)                1040      \n",
+      "_________________________________________________________________\n",
+      "dropout_20 (Dropout)         (None, 16)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_12 (Dense)             (None, 1)                 17        \n",
+      "=================================================================\n",
+      "Total params: 163,633\n",
+      "Trainable params: 163,633\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_height=96\n",
+    "image_width=96\n",
+    "num_channels=4\n",
+    "filters=[32,32,16]\n",
+    "disc_h_strides=[1,1,1]\n",
+    "disc_w_strides=[1,1,1]\n",
+    "activation='elu'\n",
+    "disc_h_kernels=[3,3,3]\n",
+    "disc_w_kernels=[3,3,3]\n",
+    "l2=0.0001\n",
+    "dropout=0.4\n",
+    "hidden=[64,16]\n",
+    "lrate=0.001\n",
+    "\n",
+    "def build_discriminator():\n",
+    "    model=Sequential()\n",
+    "    input_shape=(image_height,image_width,num_channels)\n",
+    "\n",
+    "    for i in range(len(filters)):\n",
+    "\n",
+    "        if i==0:\n",
+    "            model.add(Conv2D(filters[i],\n",
+    "                             strides=(disc_h_strides[i],disc_w_strides[i]),\n",
+    "                             input_shape=input_shape,\n",
+    "                             activation=activation,\n",
+    "                             kernel_size=(disc_h_kernels[i],disc_w_kernels[i]),\n",
+    "                             padding='same',\n",
+    "                             use_bias=True,\n",
+    "                             kernel_initializer='truncated_normal',\n",
+    "                             bias_initializer='zeros',\n",
+    "                             name='DC'+str(i),\n",
+    "                             kernel_regularizer=tf.keras.regularizers.l2(l2)\n",
+    "                             ))\n",
+    "        else:\n",
+    "            model.add(Conv2D(filters[i],\n",
+    "                             strides=(disc_h_strides[i],disc_w_strides[i]),\n",
+    "                             activation=activation,\n",
+    "                             kernel_size=(disc_h_kernels[i],disc_w_kernels[i]),\n",
+    "                             padding='same',\n",
+    "                             use_bias=True,\n",
+    "                             kernel_initializer='truncated_normal',\n",
+    "                             bias_initializer='zeros',\n",
+    "                             name='DC'+str(i),\n",
+    "                             kernel_regularizer=tf.keras.regularizers.l2(l2)\n",
+    "                             ))\n",
+    "        model.add(Dropout(dropout))\n",
+    "        model.add(MaxPooling2D(pool_size=(2,2),\n",
+    "                               strides=(2,2),\n",
+    "                               padding='valid'))\n",
+    "\n",
+    "    model.add(Flatten())\n",
+    "\n",
+    "    for i in range(len(hidden)):\n",
+    "\n",
+    "        model.add(Dense(hidden[i],\n",
+    "                        activation=activation,\n",
+    "                        kernel_regularizer=tf.keras.regularizers.l2(l2)))\n",
+    "        \n",
+    "        model.add(Dropout(dropout))\n",
+    "\n",
+    "    model.add(Dense(1,activation='sigmoid'))\n",
+    "    opt=tf.keras.optimizers.Adam(lr=lrate,beta_1=0.9,beta_2=0.999,epsilon=None,decay=0.0,amsgrad=False)\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
+    "    print(model.summary())\n",
+    "    \n",
+    "build_discriminator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_10\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_15 (Dense)             (None, 1536)              155136    \n",
+      "_________________________________________________________________\n",
+      "reshape_3 (Reshape)          (None, 4, 12, 32)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_transpose_6 (Conv2DTr (None, 48, 24, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "conv2d_transpose_7 (Conv2DTr (None, 96, 96, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 96, 96, 4)         6276      \n",
+      "=================================================================\n",
+      "Total params: 179,908\n",
+      "Trainable params: 179,908\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen_starting_h=4\n",
+    "gen_starting_w=12\n",
+    "generator_feature_space=32\n",
+    "latent_dim=100\n",
+    "activation='elu'\n",
+    "gen_h_strides=[12,2]\n",
+    "gen_w_strides=[2,4]\n",
+    "gen_h_kernels=[3,3]\n",
+    "gen_w_kernels=[3,3]\n",
+    "num_channels=4\n",
+    "def build_generator():\n",
+    "    model=Sequential()\n",
+    "    n_nodes=int(gen_starting_h*gen_starting_w*generator_feature_space)\n",
+    "    model.add(Dense(n_nodes,\n",
+    "                    input_dim=latent_dim,\n",
+    "                    activation=activation))\n",
+    "    model.add(Reshape((gen_starting_h,gen_starting_w,generator_feature_space)))\n",
+    "\n",
+    "    for i in range(len(gen_h_strides)):\n",
+    "\n",
+    "        model.add(Conv2DTranspose(generator_feature_space,\n",
+    "                                  kernel_size=(gen_h_kernels[i],gen_w_kernels[i]),\n",
+    "                                  strides=(gen_h_strides[i],gen_w_strides[i]),\n",
+    "                                  padding='same',\n",
+    "                                  activation=activation))\n",
+    "    model.add(Conv2D(num_channels,(7,7),activation='sigmoid',padding='same'))\n",
+    "    print(model.summary())\n",
+    "    \n",
+    "build_generator()"
    ]
   },
   {
