--- a/ConvGAN/Train_ConvGan.ipynb
+++ b/ConvGAN/Train_ConvGan.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "range(0, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_list=[]\n",
+    "print(len(test_list))\n",
+    "print(range(len(test_list)))\n",
+    "for i in range(len(test_list)):\n",
+    "    print(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,19 +82,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4734, 96, 96, 4)\n"
+      "(4734, 96, 96, 4)\n",
+      "[1690  433 3353 4333 2397 3515  467 2654 1714 3958 3143 3093 3509 3939\n",
+      " 4429 1892 1621  470 2209 2753 3174  215 3708 2799 4542 1560 2059 2554\n",
+      " 1465 1106 1761 2038 2128 4678 3935 4506 4535 1676 2084 1600 2358 1677\n",
+      " 1929 1896 1194 3634 1053 4377 3375 2892 2325 3417 1915 2239 4585 3704\n",
+      " 2380  263 1361 2955 2719 4443 3667 3655]\n",
+      "(64, 96, 96, 4)\n"
      ]
     }
    ],
    "source": [
-    "print(ins.shape)"
+    "print(ins.shape)\n",
+    "batch_size=64\n",
+    "idx_all=np.arange(ins.shape[0])\n",
+    "idx_pick=np.random.choice(idx_all,size=batch_size,replace=False)\n",
+    "print(idx_pick)\n",
+    "ins_pick=ins[idx_pick,:,:]\n",
+    "print(ins_pick.shape)"
    ]
   },
   {
@@ -392,29 +426,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_10\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_15 (Dense)             (None, 1536)              155136    \n",
+      "dense (Dense)                (None, 1536)              155136    \n",
       "_________________________________________________________________\n",
-      "reshape_3 (Reshape)          (None, 4, 12, 32)         0         \n",
+      "reshape (Reshape)            (None, 4, 12, 32)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_transpose_6 (Conv2DTr (None, 48, 24, 32)        9248      \n",
+      "conv2d_transpose (Conv2DTran (None, 48, 24, 32)        24608     \n",
       "_________________________________________________________________\n",
-      "conv2d_transpose_7 (Conv2DTr (None, 96, 96, 32)        9248      \n",
+      "conv2d_transpose_1 (Conv2DTr (None, 96, 96, 32)        8224      \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 96, 96, 4)         6276      \n",
+      "conv2d (Conv2D)              (None, 96, 96, 4)         6276      \n",
       "=================================================================\n",
-      "Total params: 179,908\n",
-      "Trainable params: 179,908\n",
+      "Total params: 194,244\n",
+      "Trainable params: 194,244\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -429,8 +463,8 @@
     "activation='elu'\n",
     "gen_h_strides=[12,2]\n",
     "gen_w_strides=[2,4]\n",
-    "gen_h_kernels=[3,3]\n",
-    "gen_w_kernels=[3,3]\n",
+    "gen_h_kernels=[12,2]\n",
+    "gen_w_kernels=[2,4]\n",
     "num_channels=4\n",
     "def build_generator():\n",
     "    model=Sequential()\n",
