--- a/Final_Talk/Appendix.ipynb
+++ b/Final_Talk/Appendix.ipynb
@@ -44,6 +44,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Clipping Pitches to Create Square Images\n",
+    "\n",
+    "I set each image to have 96 columns because this divides all common time signatures well. In order to create a square image I cut out lower pitches which rarely occur in the training data. A histogram of removed pitches is given below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![PitchClip](./Pitch_hist.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Minor Fifths Mapping\n",
     "\n",
     "At first I used what I called a linear mapping system, where moving up 1 pixel corresponded to moving up a half-step in pitch (ex. C -> C#). In an attempt to incorporate musical locality, I decided on a mapping system where moving up 1 pixel corresponds to moving up a Minor fifth. This meant that I had to remove all songs from the training data in a major key, as a major fifth is a different number of half steps than a minor fifth. I chose a minor fifth as opposed to a major fifth because the final fantasy MIDI set had more songs in a minor key. Luckily music21 has algorithms designed to identify the key of any MIDI file, so this was not difficult. I've included a plot explaining the fifths mapping system below. Each plot shows a C chord, then an F chord and finally a G chord. Interestingly if you wanted to show a Cminor, Fminor, and Gminor in the minor fifths mapping, it would have the same shape but flipped across the y-axis (From a C chord to a Cminor chord, the note E becomes D#)."
@@ -231,34 +247,6 @@
     "        else:\n",
     "            note_previous=False"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ConvGAN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
