--- a/Final_Talk/Appendix.ipynb
+++ b/Final_Talk/Appendix.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "### Appendix - Dabbieri\n",
     "\n",
-    "Here I'll provide additional information not covered in the final talk for the GAN side of the project"
+    "Here I'll provide additional information not covered in the final talk for the GAN side of the project\n",
+    "\n",
+    "There's also a GitHub page for the project here https://github.com/Collin-Dabbieri/GAN_Project"
    ]
   },
   {
